# fixit-cli

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  fixit.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
commands/: __init__.py  exceptions.py  log_dump.py  ping_test.py  reset_user.py
tests/: __init__.py  test_cli.py  test_log_dump.py  test_ping_test.py  test_reset_user.py
